# nd

./: CMakeLists.txt  config.h.in  nd-config.cmake.in  nd.h
app/: ndconvert.c
app/ndconvert/: CMakeLists.txt  ndconvert.c  ndconvert.newish.c
cmake/: CheckCudaComputeCaps.cmake  GTestConfig.cmake  GenerateGoogleTest.cmake  cuda_compute_capability.c  gtest-config.cmake  ndio-ffmpeg-config.cmake  ndio-hdf5-config.cmake  ndio-raw-config.cmake  ndio-series-config.cmake  ndio-tiff-config.cmake
doc/: Doxyfile.in  mainpage.doc.h  ndops-module.doc.h  plugin-module.doc.h  serve.sh
doc/wiki/tiddlers/: $__DefaultTiddlers.tid  $__SiteSubtitle.tid  $__SiteTitle.tid  nd.tid  ndio Format Context Design.tid  personal development notebook.tid
plugins/ndio-ffmpeg/: CMakeLists.txt
plugins/ndio-ffmpeg/cmake/: FindFFMPEG.cmake  FindOgg.cmake  FindVPX.cmake  Findtheora.cmake  Findva.cmake  Findx264.cmake  Findxvid.cmake  GenerateFFMPEG.cmake  GenerateFFMpeg.cmake  ffmpeg-config.cmake
plugins/ndio-ffmpeg/ffmpeg/ffmpeg-git-a4c22e3-win64-dev/include/libavutil/: common.h  pixdesc.h
plugins/ndio-ffmpeg/src/: ffmpeg_adapt.c  ndio-ffmpeg.c  strsep.h
plugins/ndio-hdf5/: CMakeLists.txt  config.h.in
plugins/ndio-hdf5/cmake/: FindHDF5.cmake  HDF5Config.cmake  Patch.cmake.in  SZIPConfig.cmake  ZLIBConfig.cmake
plugins/ndio-hdf5/src/: macros.h  ndio-hdf5.c
plugins/ndio-hdf5/test/: io.cc
plugins/ndio-raw/: CMakeLists.txt
plugins/ndio-raw/src/: ndio-raw.c
plugins/ndio-raw/test/: io.cc
plugins/ndio-series/: CMakeLists.txt  config.h.in
plugins/ndio-series/cmake/: FindRE2.cmake
plugins/ndio-series/src/: ndio-series.cc
plugins/ndio-series/test/: io.cc
plugins/ndio-tiff/: CMakeLists.txt
plugins/ndio-tiff/cmake/: FindMylib.cmake  mylib-config.cmake
plugins/ndio-tiff/src/: ndio-tiff.c
src/: core.c  core.h  fft.c  fft.cpu.cc  io.c  io.h  nd.c  nd.h  ndcat.c  normxcorr.c  normxcorr.h  ops.c  ops.h
src/affine/: affine.cu  ndaffine.c
src/affine/generic/: all.c  generic.affine.c
src/conv/: common.h  convolve.cu  ndconv.c
src/conv/generic/: all.c  generic.conv.c  macros.h
src/generic/: all.c  bitshift_ip.cu  fill.cu  fmad.cu  fmad_scalar_ip.cu  macros.h  ops.2type.c  ops.bitshift_ip.c  ops.fill.c  ops.fmad_scalar_ip.c  ops.gen.c  ops.saturate_ip.c  ops.xor_ip.c  saturate_ip.cu  xor_ip.cu
src/io/: interface.h  plugin.c  plugin.h
src/io/tiff/src/: plugin.c
src/private/: element-wise.h  kind.c
src/xcorr/: normxcorr.c  normxcorr.h
test/: CMakeLists.txt  affine.cc  array.cc  conv.cc  fft.cc  fill.cc  fmad.cc  fmad_scalar_ip.cc  helpers.cc  helpers.h  io.cc  ops.cc  saturate_ip.cc  xor_ip.cc
test/data/conv/: avg.mat  generate.m
